# OpenExtract

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: settings.example.yaml
data/test/: test_policies.xlsx
docs/: QUICKSTART.md  architecture.md  overview.md  roadmap.md
examples/pipelines/: policy_labeling.yaml  test_extraction.yaml
openextract/: __init__.py  config.py
openextract/pipelines/: __init__.py  base.py
openextract/prompts/: __init__.py  loader.py
openextract/providers/: base.py  siliconflow.py
openextract/sources/: __init__.py  excel.py
prompt/test/: policy_extract.txt
scripts/: generate_test_data.py  run_pipeline.py  view_results.py
